implementacion de mandar correos al suario al momento de registrarse y tambien mandar correos cundo no hay stock de algunos productos, agrgacion de la base de datos con modificaciones
